--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "format": "prettier \"src/**/*.ts\" --write",
     "format:check": "prettier \"src/**/*.ts\" --check",
     "lint": "eslint src --ext .ts --fix",
-    "lint:check": "eslint src --ext .ts"
+    "lint:check": "eslint src --ext .ts",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
+    "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
@@ -47,7 +50,8 @@
     "rimraf": "^5.0.1",
     "source-map-support": "^0.5.21",
     "typescript": "^5.1.6",
-    "vitest": "^0.32.4"
+    "vitest": "^0.32.4",
+    "@vitest/coverage-v8": "^0.33.0"
   },
   "dependencies": {
     "axios": "^1.4.0"
