--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
-  "include": ["./src/**/*.ts"],
+  "include": [
+    "./src/**/*.ts",
+    "node_modules/vitest/globals.d.ts"
+  ],
   "compilerOptions": {
     "lib": ["es2022", "dom"],
     "module": "esnext",
@@ -15,6 +18,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
-    "resolveJsonModule": true,
+    "resolveJsonModule": true
   }
 }
