--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.69",
     "@types/node": "^18.16.3",
     "@types/prompts": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
+    "@vitest/coverage-v8": "^0.33.0",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
@@ -44,14 +46,13 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "nyc": "^15.1.0",
     "prettier": "^3.0.0",
     "prettier-plugin-organize-imports": "^3.2.2",
-    "nyc": "^15.1.0",
     "rimraf": "^5.0.1",
     "source-map-support": "^0.5.21",
     "typescript": "^5.1.6",
-    "vitest": "^0.32.4",
-    "@vitest/coverage-v8": "^0.33.0"
+    "vitest": "^0.32.4"
   },
   "dependencies": {
     "axios": "^1.4.0"
