--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ubereats-sdk",
-  "version": "0.0.6-development",
+  "version": "0.0.1",
   "exports": {
     "require": "./build/index.js",
     "import": "./build/index.js"
@@ -8,6 +8,10 @@
   "author": {
     "email": "avnignc@gmail.com",
     "name": "Avni Genc"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/avnigenc/ubereats-node-sdk.git"
   },
   "types": "./build/index.d.ts",
   "license": "MIT",
